fix abolute positioning overflow

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -33,8 +33,11 @@
 
   &-title {
     margin: 0;
+    padding-left: 20px;
+    padding-right: 20px;
     font-size: 1.5rem;
     margin-bottom: 10px;
+    word-break: break-word;
   }
 
   &-message {
